--- a/frontend/src/app/components/post-item/post-item.component.html
+++ b/frontend/src/app/components/post-item/post-item.component.html
@@ -1,23 +1,15 @@
 <div class="post-card">
   <div class="post-header">
-    <div class="author-info">
-      <div class="author-avatar" *ngIf="post.user?.photo">
-        <img [src]="post.user.photo" alt="Photo de profil">
-      </div>
-      <span class="author-name">{{ post.user?.username || 'Utilisateur' }}</span>
-    </div>
+    <img alt="Photo Author" class="author-photo">
+    <div class="post-author">{{ post.userPseudo }}</div>
   </div>
-
-  <div class="post-body">
-    <h3 class="post-title">{{ post.title }}</h3>
-    <p class="post-content">{{ post.content }}</p>
+  <div class="post-title-container">
+    <div class="post-title">{{ post.title }}</div>
+    <button (click)="editPost()" class="edit-btn">Modifier</button>
   </div>
-
-  <div class="post-footer">
-    <div class="post-date">{{ post.createdAt | date:'short' }}</div>
-    <div class="post-actions">
-      <button class="action-btn edit-btn" (click)="editPost()">Modifier</button>
-      <button class="action-btn delete-btn" (click)="deletePost()">Supprimer</button>
-    </div>
+  <div class="post-content-container">
+    <div class="post-content">{{ post.contenu }}</div>
+    <button (click)="deletePost()" class="delete-btn">Supprimer</button>
   </div>
+  <div class="post-date">{{ post.creationDate | date:'medium' }}</div>
 </div>
