--- a/frontend/src/app/components/post-item/post-item.component.html
+++ b/frontend/src/app/components/post-item/post-item.component.html
@@ -1,6 +1,6 @@
 <div class="post-card">
   <div class="post-header">
-    <img alt="Photo Author" class="author-photo">
+    <img [src]="userImage" alt="Photo Author" class="author-photo">
     <div class="post-author">{{ post.userPseudo }}</div>
   </div>
   <div class="post-title-container">
