--- a/frontend/src/app/components/bottom-nav/bottom-nav.component.html
+++ b/frontend/src/app/components/bottom-nav/bottom-nav.component.html
@@ -1,11 +1,11 @@
 <nav class="bottom-nav">
-  <div class="nav-item" (click)="navigateTo('/profile')">
+  <div class="nav-item" (click)="navigateTo('/register')">
     <i class="fa fa-user"></i>
   </div>
   <div class="nav-item" (click)="navigateTo('/home')">
     <i class="fa fa-home"></i>
   </div>
-  <div class="nav-item" (click)="navigateTo('/new-post')">
+  <div class="nav-item" (click)="navigateTo('/create-post')">
     <i class="fa fa-edit"></i>
   </div>
   <div class="nav-item" (click)="navigateTo('/logout')">
