--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="home-container">
   <div class="header">
-    <h1>PostPaf</h1>
+    <a [routerLink]="['/']" class="logo-link">
+      <img src="assets\logo.jpg" alt="PostPaf" class="logo-image">
+    </a>
     <div class="search-bar">
       <input
         type="text"
