--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -7,34 +7,10 @@
   background-color: #F0F4F8; /* Fond bleu très pâle */
 }
 
-/* Ajoutez ces styles à votre fichier CSS */
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centre les éléments horizontalement */
-  padding: 12px;
-  border-bottom: 1px solid #D1DCE8;
-}
-
-.logo-link {
-  text-decoration: none;
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: center; /* Centre le logo dans son conteneur */
-  width: 100%; /* Prend toute la largeur disponible */
-}
-
-.logo-image {
-  height: 70px;
-  width: 150px;
-  max-width: 200px; /* Limite la largeur maximale */
-  border-radius: 40px;
-}
-
 /* Déplacé en dehors de la media query pour être appliqué sur tous les écrans */
 .search-bar {
   display: flex;
-  position: relative;
+  align-items: center;
   margin-bottom: 10px;
   width: 90%; /* Largeur pour mobile */
 }
@@ -107,15 +83,6 @@
 
 /* Media queries pour les écrans plus grands */
 @media (min-width: 768px) {
-  .header {
-    flex-direction: column; /* Garde la disposition en colonne même sur grand écran */
-  }
-  
-  .logo-image {
-    height: 100px; /* Légèrement plus grand sur desktop */
-    width: 200px;
-  }
-  
   .search-bar {
     width: 70%; /* Barre de recherche plus large mais pas à 100% */
     max-width: 500px; /* Limite la largeur maximale */
