--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -2,8 +2,9 @@
 .home-container {
   display: flex;
   flex-direction: column;
+  align-items: center; /* Centre les éléments horizontalement */
   height: 100%;
-  padding-bottom: 60px;
+  padding-bottom: 20px;
   background-color: #F0F4F8; /* Fond bleu très pâle */
 }
 
@@ -12,12 +13,15 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  margin-top: 20px;
+  padding-top: 10px;
   width: 90%; /* Largeur pour mobile */
+  position: relative; /* Important pour les éléments positionnés absolument */
 }
 
 .search-bar input {
   flex: 1;
-  padding: 10px 15px;
+  padding: 20px 15px;
   border-radius: 20px;
   border: 1px solid #D1DCE8; /* Bordure plus douce */
   outline: none;
@@ -29,7 +33,7 @@
 .search-bar .search-button {
   position: absolute;
   right: 40px;
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
   background: none;
   border: none;
@@ -40,7 +44,7 @@
 .clear-button {
   position: absolute;
   right: 10px; /* espace entre la loupe et le X */
-  top: 50%;
+  top: 60%;
   transform: translateY(-50%);
   background: none;
   border: none;
@@ -51,7 +55,7 @@
 
 .sort-bar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center; /* Centrer le contenu de la barre de tri */
   padding: 0 15px;
   margin-bottom: 10px;
   width: 90%; /* Cohérent avec la largeur de la barre de recherche */
@@ -78,7 +82,9 @@
   flex: 1;
   overflow-y: auto;
   padding: 10px;
+  padding-bottom: 60px;
   background-color: #F0F4F8; /* Fond bleu très pâle */
+  width: 100%; /* Assure que le conteneur de posts prend toute la largeur */
 }
 
 /* Media queries pour les écrans plus grands */
