--- a/frontend/src/app/components/create-post/create-post.component.css
+++ b/frontend/src/app/components/create-post/create-post.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   max-width: 600px;
   margin: 2rem auto;
+  margin-bottom: 6rem;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
