--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -18,7 +18,7 @@
     
     <div class="form-group">
       <label for="imageUrl">URL de l'image de profil</label>
-      <input type="url" id="imageUrl" [(ngModel)]="user.imageUrl" name="imageUrl" placeholder="'https://...'" required>
+      <input type="url" id="imageUrl" [(ngModel)]="user.image" name="imageUrl" placeholder="https://..." required>
     </div>
     
     <div class="form-group">
