ajout de la connexion

--- a/frontend/src/app/components/bottom-nav/bottom-nav.component.html
+++ b/frontend/src/app/components/bottom-nav/bottom-nav.component.html
@@ -8,7 +8,7 @@
   <div class="nav-item" (click)="navigateTo('/create-post')">
     <i class="fa fa-edit"></i>
   </div>
-  <div class="nav-item" (click)="navigateTo('/logout')">
+  <div class="nav-item" (click)="navigateTo('/register')">
     <i class="fa fa-power-off"></i>
   </div>
 </nav>
