--- a/frontend/src/app/components/bottom-nav/bottom-nav.component.html
+++ b/frontend/src/app/components/bottom-nav/bottom-nav.component.html
@@ -1,6 +1,6 @@
 <nav class="bottom-nav">
   <div class="nav-item" (click)="navigateTo('/register')">
-    <i class="fa fa-user"></i>
+    <i class="fa fa-user-plus"></i>
   </div>
   <div class="nav-item" (click)="navigateTo('/home')">
     <i class="fa fa-home"></i>
@@ -8,7 +8,10 @@
   <div class="nav-item" (click)="navigateTo('/create-post')">
     <i class="fa fa-edit"></i>
   </div>
-  <div class="nav-item" (click)="navigateTo('/register')">
-    <i class="fa fa-power-off"></i>
+  <div class="nav-item" (click)="navigateTo('/profile')">
+    <i class="fa fa-user-circle"></i>
+  </div>
+  <div class="nav-item" (click)="navigateTo('/logout')">
+    <i class="fa fa-sign-in-alt"></i>
   </div>
 </nav>
