--- a/frontend/src/app/components/post-item/post-item.component.html
+++ b/frontend/src/app/components/post-item/post-item.component.html
@@ -3,13 +3,16 @@
     <img [src]="userImage" alt="Photo Author" class="author-photo">
     <div class="post-author">{{ post.userPseudo }}</div>
   </div>
+
   <div class="post-title-container">
     <div class="post-title">{{ post.title }}</div>
-    <button (click)="editPost()" class="edit-btn">Modifier</button>
+    <button *ngIf="isOwner" (click)="editPost()" class="edit-btn">Modifier</button>
   </div>
+
   <div class="post-content-container">
     <div class="post-content">{{ post.contenu }}</div>
-    <button (click)="deletePost()" class="delete-btn">Supprimer</button>
+    <button *ngIf="isOwner" (click)="deletePost()" class="delete-btn">Supprimer</button>
   </div>
+
   <div class="post-date">{{ post.creationDate | date:'medium' }}</div>
 </div>
